tg-2748 fix edad erronea en busqueda por coincidencia de pacientes
(cherry picked from commit 61e0154d494c848d40f26a9c020b493c656907a2)

--- a/front-end/webapp/src/app/modules/pacientes/component/view-patient-detail/view-patient-detail.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/view-patient-detail/view-patient-detail.component.html
@@ -1,7 +1,7 @@
 <app-content width="full">
 	<mat-icon color="primary" >error_outline</mat-icon>
 	<section>
-		<h2 class="page-title" [translate]="'Se descartará la búsqueda y se abriran los datos de empadronamiento de:'"></h2>
+		<h2 class="page-title" [translate]="'Se descartará la búsqueda y se abrirán los datos de empadronamiento de:'"></h2>
 	</section>
 	<div class="sticky">
 		<app-patient-card *ngIf="personPhoto" [patient]="patient" [personPhoto]="personPhoto">
