--- a/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
@@ -122,7 +122,7 @@
 				</div>
 				<br>
 				<mat-action-row *hasRole="['ADMINISTRATIVO']">
-					<button mat-stroked-button (click)="back()">
+					<button mat-stroked-button type="button" (click)="back()">
 						<span [translate]="'buttons.BACK'"></span>
 					</button>
 					<button mat-raised-button color="primary" matBadgeColor="accent" type="submit">
