tg-2749 Ajustar uso de dtos en FE

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
@@ -97,7 +97,7 @@
 
 
 		<h2 [translate]="'Intervención policial'"></h2>
-		<mat-radio-group name="policeIntervention" id="policeIntervention" (change)="onChange($event)">
+		<mat-radio-group name="policeIntervention" id="policeInterventionRadio" (change)="onChange($event)">
 			<mat-radio-button id="policeIntervention" value='true'>
 				Si
 			</mat-radio-button>
