tg-2512 agrega triage details en episode

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
@@ -75,7 +75,7 @@
 			</mat-card>
 
 			<mat-card id="last-triage-card">
-				<app-triage-details></app-triage-details>
+				<app-triage-details [triage]="triage"></app-triage-details>
 			</mat-card>
 		</div>
 
