--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.html
@@ -32,7 +32,7 @@
 												<button mat-menu-item (click)="openDialogNewMedication(medicationInfo)">
 													<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.RE_PRESCRIBE'"></span>
 												</button>
-												<button mat-menu-item *ngIf="medicationInfo.statusId === medicationStatus.ACTIVE">
+												<button mat-menu-item *ngIf="medicationInfo.statusId === medicationStatus.ACTIVE" (click)="openSuspendMedicationDialog(medicationInfo)">
 													<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
 												</button>
 												<button mat-menu-item *ngIf="medicationInfo.statusId !== medicationStatus.STOPPED" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE, [medicationInfo.id])">
