tg-2796 [FE] Armado de dto de nuevo episodio adulto ginecologico

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.html
@@ -10,13 +10,13 @@
 				<mat-label [translate]="'guardia.triage.HEART_RATE'"></mat-label>
 				<input matInput type="text" id="heartRate" name="heartRate"
 				       formControlName="heartRate"
-				       placeholder="{{'pacientes.search_patient.forms.HEART_RATE' | translate }}">
+				       placeholder="{{'guardia.triage.HEART_RATE' | translate }}">
 			</mat-form-field>
 			<mat-form-field appearance="outline">
 				<mat-label [translate]="'guardia.triage.RESPIRATORY_RATE'"></mat-label>
 				<input matInput type="text" id="respiratoryRate" name="respiratoryRate"
 				       formControlName="respiratoryRate"
-				       placeholder="{{'pacientes.search_patient.forms.RESPIRATORY_RATE' | translate }}">
+				       placeholder="{{'guardia.triage.RESPIRATORY_RATE' | translate }}">
 			</mat-form-field>
 		</div>
 		<div fxLayout="row" fxLayoutGap="20px">
@@ -24,13 +24,13 @@
 				<mat-label [translate]="'guardia.triage.TEMPERATURE'"></mat-label>
 				<input matInput type="text" id="temperature" name="temperature"
 				       formControlName="temperature"
-				       placeholder="{{'pacientes.search_patient.forms.TEMPERATURE' | translate }}">
+				       placeholder="{{'guardia.triage.TEMPERATURE' | translate }}">
 			</mat-form-field>
 			<mat-form-field appearance="outline">
 				<mat-label [translate]="'guardia.triage.OXIGEN_SATURATION'"></mat-label>
 				<input matInput type="text" id="bloodOxygenSaturation" name="bloodOxygenSaturation"
 				       formControlName="bloodOxygenSaturation"
-				       placeholder="{{'pacientes.search_patient.forms.OXIGEN_SATURATION' | translate }}">
+				       placeholder="{{'guardia.triage.OXIGEN_SATURATION' | translate }}">
 			</mat-form-field>
 		</div>
 		<div fxLayout="row" fxLayoutGap="20px">
@@ -38,20 +38,20 @@
 				<mat-label [translate]="'guardia.triage.SYSTOLIC_BLOOD'"></mat-label>
 				<input matInput type="text" id="systolicBloodPressure" name="systolicBloodPressure"
 				       formControlName="systolicBloodPressure"
-				       placeholder="{{'pacientes.search_patient.forms.SYSTOLIC_BLOOD' | translate }}">
+				       placeholder="{{'guardia.triage.SYSTOLIC_BLOOD' | translate }}">
 			</mat-form-field>
 			<mat-form-field appearance="outline">
 				<mat-label [translate]="'guardia.triage.DIASTOLIC_BLOOD'"></mat-label>
 				<input matInput type="text" id="diastolicBloodPressure" name="diastolicBloodPressure"
 				       formControlName="diastolicBloodPressure"
-				       placeholder="{{'pacientes.search_patient.forms.DIASTOLIC_BLOOD' | translate }}">
+				       placeholder="{{'guardia.triage.DIASTOLIC_BLOOD' | translate }}">
 			</mat-form-field>
 		</div>
 
 		<h3 class="page-title" [translate]="'guardia.triage.EVALUATION'"></h3>
 		<div fxLayout="row">
-			<mat-form-field class="example-full-width">
-				<textarea matInput placeholder="Descripción" name="evaluation"></textarea>
+			<mat-form-field appearance="outline">
+				<textarea matInput placeholder="Descripción" formControlName="evaluation" name="evaluation"></textarea>
 			</mat-form-field>
 		</div>
 
