--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.scss
@@ -5,3 +5,15 @@
 .element-light-color {
 	color: rgba(0, 0, 0, 0.54);
 }
+
+.checkbox-div-body {
+	margin-top: 10px;
+}
+
+.checkbox-div-header {
+	margin-top: 8px;
+}
+
+.header-filters {
+	padding: 16px 16px 0 16px;
+}
