--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.html
@@ -1,215 +1,13 @@
 <app-content width="full">
-	<ng-template #noInfo>
-		<app-no-data></app-no-data>
-	</ng-template>
 	<section>
 		<h2 [translate]="'ambulatoria.paciente.ordenes_prescripciones.TITLE'"></h2>
 		<div fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="20px">
 			<div fxFlex="50%">
-				<app-summary-card id="medicacion"	[header]="medicacion"
-													[editable]="true"
-													[canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
-													(openInNew)="openDialogNewMedication()">
-
-					<div class="header-filters" fxLayout="row" fxLayoutGap="15px">
-						<div class="checkbox-div-header" fxFlex="5%">
-							<mat-checkbox (change)="selectAllMedication($event.checked)"></mat-checkbox>
-						</div>
-
-						<div fxFlex="95%">
-							<button mat-button class="element-light-color" (click)="openDialogNewMedication()">
-								<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.RE_PRESCRIBE'"></span>
-							</button>
-							<button mat-button class="element-light-color" *ngIf="checkMedicationStatus(medicationStatus.ACTIVE)" (click)="openSuspendMedicationDialog()">
-								<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
-							</button>
-							<button mat-button class="element-light-color" *ngIf="checkMedicationStatus(medicationStatus.STOPPED)" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE)">
-								<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.FINALIZE'"></span>
-							</button>
-						</div>
-					</div>
-					<form [formGroup]="medicationCheckboxes">						
-						<mat-list id="lista-medication" *ngIf="medicationsInfo?.length > 0 else noInfo">
-							<div formArrayName="checkboxArray">
-							<div fxLayout="row" *ngFor="let medicationInfo of medicationsInfo; let i=index" [formGroupName]="i">
-								<mat-list-item>
-									<div fxFlex="100%" fxLayout="row" fxLayoutGap="15px">
-
-										<div class="checkbox-div-body" fxFlex="5%">
-											<mat-checkbox formControlName="checked" (change)="checkMedication($event.checked, medicationInfo)"></mat-checkbox>
-										</div>
-
-										<div fxFlex="95%">
-											<div fxLayout="row" fxLayoutAlign="space-between start">
-												<h3 mat-line class="primary bold element-margin">
-													{{renderStatusDescription(medicationInfo.statusId)}}
-												</h3>
-		
-												<div>
-													<button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="true">
-														<mat-icon>more_vert</mat-icon>
-													</button>
-													<mat-menu #menu="matMenu">
-														<button mat-menu-item (click)="downloadRecipe(medicationInfo.id)">
-															<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DOWNLOAD'"></span>
-														</button>
-														<button mat-menu-item (click)="openDialogNewMedication(medicationInfo)">
-															<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.RE_PRESCRIBE'"></span>
-														</button>
-														<button mat-menu-item *ngIf="medicationInfo.statusId === medicationStatus.ACTIVE" (click)="openSuspendMedicationDialog(medicationInfo)">
-															<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
-														</button>
-														<button mat-menu-item *ngIf="medicationInfo.statusId !== medicationStatus.STOPPED" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE, medicationInfo)">
-															<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.FINALIZE'"></span>
-														</button>
-													</mat-menu>
-												</div>
-											</div>
-		
-											<div class="element-margin" fxLayout="column-reverse" fxLayout.gt-sm="row" fxLayoutAlign="space-between start">
-												<span class="mat-subheading-2 capitalize-first-letter" style="margin: 0" fxFlex="70%">
-													{{medicationInfo.snomed.pt}}
-												</span>
-		
-												<span mat-line class="mat-body element-light-color" *ngIf="medicationInfo.hasRecipe else NoRecipe">
-													Receta #{{medicationInfo.medicationRequestId}}
-												</span>
-												<ng-template #NoRecipe>
-													<span mat-line class="mat-body element-light-color"
-														[translate]="'ambulatoria.paciente.ordenes_prescripciones.SIN_RECETA'">
-													</span>
-												</ng-template>
-											</div>
-		
-											<div fxLayout="column">
-												<div>
-													<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.dosage?.periodUnit == 'h'">
-														Una aplicación cada {{medicationInfo.dosage.frequency}} hs
-													</span>
-													<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.dosage?.periodUnit == 'd'"
-														[translate]="'ambulatoria.paciente.ordenes_prescripciones.APLICACION_DIARIA'">
-													</span>
-												</div>
-		
-												<div>
-													<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.dosage?.duration != undefined">
-														Durante {{medicationInfo.dosage.duration}} días
-													</span>
-													<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.dosage?.chronic"
-														[translate]="'ambulatoria.paciente.ordenes_prescripciones.USO_CRONICO'">
-													</span>
-												</div>
-											</div>
-		
-											<div class="element-margin">
-												<h3 mat-line class="primary bold capitalize-first-letter">
-													{{medicationInfo.healthCondition.snomed.pt}}
-												</h3>
-											</div>
-		
-											<div fxLayout="column" fxLayout.gt-sm="row" fxLayoutAlign="space-between start">
-												<span mat-line class="mat-body capitalize-first-letter element-light-color">
-													{{medicationInfo.doctor.firstName }} {{medicationInfo.doctor.lastName }}
-												</span>
-												<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.totalDays == 0"
-													[translate]="'ambulatoria.paciente.ordenes_prescripciones.DESDE_HOY'">
-												</span>
-												<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.totalDays == 1"
-													[translate]="'ambulatoria.paciente.ordenes_prescripciones.UN_DIA'">
-												</span>
-												<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.totalDays > 1">
-													Hace {{medicationInfo.totalDays }} días
-												</span>
-											</div>
-										</div>
-
-									</div>
-								</mat-list-item>
-								<mat-divider></mat-divider>
-							</div>
-							</div>
-						</mat-list>
-					</form>
-				</app-summary-card>
+				<app-card-medicaciones [patientId]="patientId"></app-card-medicaciones>
 			</div>
 			<div fxFlex="50%" fxLayoutGap="20px">
-				<app-summary-card id="estudios" [header]="estudios"
-												[editable]="true"
-												[canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
-												(openInNew)="openDialogNewStudy()">
-
-				<mat-list id="lista-studies" *ngIf="diagnosticReportsInfo?.length > 0 else noInfo">
-					<div fxLayout="row" *ngFor="let diagnosticReport of diagnosticReportsInfo">
-						<mat-list-item >
-							<div fxFlex="100%">
-
-								<div fxLayout="row" fxLayoutAlign="space-between start">
-									<h3 mat-line class="primary bold element-margin" *ngIf="diagnosticReport.statusId == STUDY_STATUS.REGISTERED.id">
-										{{STUDY_STATUS.REGISTERED.description}}
-									</h3>
-									<h3 mat-line class="primary bold element-margin" *ngIf="diagnosticReport.statusId == STUDY_STATUS.FINAL.id">
-										{{STUDY_STATUS.FINAL.description}}
-									</h3>
-									<h3 mat-line class="primary bold element-margin" *ngIf="diagnosticReport.statusId == STUDY_STATUS.ERROR.id">
-										{{STUDY_STATUS.ERROR.description}}
-									</h3>
-									<div>
-										<button mat-icon-button [matMenuTriggerFor]="menu" >
-											<mat-icon>more_vert</mat-icon>
-										</button>
-										<mat-menu #menu="matMenu">
-											<button mat-menu-item >
-												<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.COMPLETE'"></span>
-											</button>
-											<button mat-menu-item >
-												<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DELETE'"></span>
-											</button>
-										</mat-menu>
-									</div>
-								</div>
-
-								<div class="element-margin" fxLayout="column-reverse" fxLayout.gt-sm="row" fxLayoutAlign="space-between start">
-									<span class="mat-subheading-2 capitalize-first-letter" style="margin: 0" fxFlex="70%">
-										{{diagnosticReport.snomed.pt}}
-									</span>
-									<span mat-line class="mat-body element-light-color">
-										Orden #{{diagnosticReport.serviceRequestId}}
-									</span>
-								</div>
-
-								<div class="element-margin">
-									<h3 mat-line class="primary bold capitalize-first-letter">
-										{{diagnosticReport.healthCondition.snomed.pt}}
-									</h3>
-								</div>
-
-								<div fxLayout="column" fxLayout.gt-sm="row" fxLayoutAlign="space-between start">
-									<span mat-line class="mat-body capitalize-first-letter element-light-color">
-										{{diagnosticReport.doctor.firstName }} {{diagnosticReport.doctor.lastName }}
-									</span>
-									<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="diagnosticReport.totalDays == 0"
-										[translate]="'ambulatoria.paciente.ordenes_prescripciones.DESDE_HOY'">
-									</span>
-									<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="diagnosticReport.totalDays == 1"
-										[translate]="'ambulatoria.paciente.ordenes_prescripciones.UN_DIA'">
-									</span>
-									<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="diagnosticReport.totalDays > 1">
-										Hace {{diagnosticReport.totalDays }} días
-									</span>
-								</div>
-
-							</div>
-						</mat-list-item>
-						<mat-divider></mat-divider>
-					</div>
-				</mat-list>
-				</app-summary-card>
-				<app-summary-card id="indicaciones-generales" [header]="indicaciones"
-																 [editable]="true"
-																 [canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
-																 (openInNew)="openDialogNewRecommendation()">
-					<app-no-data></app-no-data>
-				</app-summary-card>
+				<app-card-estudios [patientId]="patientId"></app-card-estudios>
+				<app-card-indicaciones [patientId]="patientId"></app-card-indicaciones>
 			</div>
 		</div>
 	</section>
