--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
@@ -25,8 +25,8 @@
 					</mat-option>
 				</mat-select>
 			</mat-form-field>
-			<button mat-stroked-button type="button" color="primary" (click)="openMedicalCoverageDialog()" class="uppercase"
-				translate="guardia.administrative_admision.UPDATE_MEDICAL_COVERAGE"></button>
+			<button mat-stroked-button type="button" color="primary" (click)="openMedicalCoverageDialog()"
+				class="uppercase" translate="guardia.administrative_admision.UPDATE_MEDICAL_COVERAGE"></button>
 		</ng-container>
 
 		<div id="motivos">
@@ -93,6 +93,8 @@
 			*ngIf="form.value.emergencyCareEntranceTypeId === WITH_DOCTOR_IN_AMBULANCE || form.value.emergencyCareEntranceTypeId === WITHOUT_DOCTOR_IN_AMBULANCE">
 			<input formControlName="ambulanceCompanyId"
 				placeholder="{{'guardia.administrative_admision.form.AMBULANCE_COMPANY_ID' | translate }}" matInput>
+			<mat-error *ngIf="hasError(form, 'maxlength', 'ambulanceCompanyId')" translate="forms.MAX_LENGTH_ERROR"
+				[translateParams]="{max: AMBULANCE.COMPANY_ID.max_length}"></mat-error>
 		</mat-form-field>
 
 
@@ -111,8 +113,7 @@
 
 			<div fxLayout="row" fxLayoutGap="5px">
 				<mat-form-field appearance="outline">
-					<input formControlName="dateCall" id="dateCall" matInput
-					       [matDatepicker]="initPicker" [max]="today"
+					<input formControlName="dateCall" id="dateCall" matInput [matDatepicker]="initPicker" [max]="today"
 						placeholder="{{'guardia.administrative_admision.form.police_intervention.DATE' | translate}}">
 					<mat-datepicker-toggle matSuffix [for]="initPicker"></mat-datepicker-toggle>
 					<mat-datepicker #initPicker></mat-datepicker>
@@ -120,8 +121,7 @@
 
 
 				<mat-form-field appearance="outline">
-					<input matInput id="time" type="text" formControlName="timeCall"
-						pattern="{{TIME_PATTERN}}"
+					<input matInput id="time" type="text" formControlName="timeCall" pattern="{{TIME_PATTERN}}"
 						placeholder="{{'guardia.administrative_admision.form.police_intervention.TIME' | translate}}">
 					<mat-error *ngIf="hasError(form, 'pattern', 'timeCall')">La hora debe cumplir con el formato de 24
 						hs y tener dos digitos para la hora y los minutos respectivamente</mat-error>
@@ -134,6 +134,8 @@
 				<input formControlName="plateNumber"
 					placeholder="{{'guardia.administrative_admision.form.police_intervention.police_officer.PLATE_NUMBER' | translate }}"
 					matInput>
+				<mat-error *ngIf="hasError(form, 'maxlength', 'plateNumber')" translate="forms.MAX_LENGTH_ERROR"
+					[translateParams]="{max: POLICE_OFFICER.PLATE_NUMBER.max_length}"></mat-error>
 			</mat-form-field>
 			<div fxLayout="row" fxLayoutGap="5px">
 
@@ -141,11 +143,15 @@
 					<input formControlName="firstName"
 						placeholder="{{'guardia.administrative_admision.form.police_intervention.police_officer.NAME' | translate }}"
 						matInput>
+					<mat-error *ngIf="hasError(form, 'maxlength', 'firstName')" translate="forms.MAX_LENGTH_ERROR"
+						[translateParams]="{max: PERSON.MAX_LENGTH.firstName}"></mat-error>
 				</mat-form-field>
 				<mat-form-field appearance="outline">
 					<input formControlName="lastName"
 						placeholder="{{'guardia.administrative_admision.form.police_intervention.police_officer.LAST_NAME' | translate }}"
 						matInput>
+					<mat-error *ngIf="hasError(form, 'maxlength', 'lastName')" translate="forms.MAX_LENGTH_ERROR"
+						[translateParams]="{max: PERSON.MAX_LENGTH.firstName}"></mat-error>
 				</mat-form-field>
 			</div>
 		</ng-container>
